--- a/packages/custom/testpkg/public/views/index.html
+++ b/packages/custom/testpkg/public/views/index.html
@@ -1,7 +1,12 @@
 <div class="testpkg-example" ng-controller="TestpkgController">
   <h1>Example view from your new awesome package</h1>
   <h2>Package: <span>{{package.name}}</span></h2>
-  <ol>
+
+  <!-- <leaflet id="mymap" defaults="defaults" lf-center="center" height="480px" width="640px"></leaflet> -->
+  <leaflet id="mymap" lf-center="center" layers="layers" height="480px" width="640px"></leaflet>
+  <!-- <openlayers ol-center="center" height="480px" width="640px"></openlayers> -->
+
+  <!-- <ol>
     <li>
       <a ui-sref="testpkg circles example({circle:'anyone'})">Server route that anyone can access</a>
     </li>
@@ -20,5 +25,5 @@
   <p class="alert alert-info">You can find your package in /packages/testpkg</p>
   </br>
   <h3><a href="http://learn.mean.io">Documentation</a></h3>
-  </br>
+  </br> -->
 </div>
