Moving to the geoexpress package - meanStarter package. Main page overridden. Added the ability to upload layers with files. The file upload is taken from meanio-upload but ported inside the geoexpress module.

--- a/packages/custom/geoexpress/public/views/system/index.html
+++ b/packages/custom/geoexpress/public/views/system/index.html
@@ -22,11 +22,11 @@
 
     <div class="col-md-12 row">
         <div class="col-md-6">
-          <p><a href="/layers/"><i class="fa fa-square-o fa-5x rotate-45"></i></a></p>
-          <h2><a href="/layers/">53 Layers</a></h2>
+          <p><a href="/layers"><i class="fa fa-square-o fa-5x rotate-45"></i></a></p>
+          <h2><a href="/layers">Layers</a></h2>
           <p>Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats.</p>
 
-          <p class="text-center"><a class="btn btn-default" href="/layers/" role="button">Explore layers »</a></p>
+          <p class="text-center"><a class="btn btn-default" href="/layers" role="button">Explore layers »</a></p>
 
         </div>
         <div class="col-md-6">
