First layers upload of shapefiles working -- super prototype.

--- a/packages/custom/geoexpress/public/views/layers/view.html
+++ b/packages/custom/geoexpress/public/views/layers/view.html
@@ -10,5 +10,5 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-  <div>{{layer.content}}</div>
+  <leaflet id="mymap" lf-center="center" layers="mylayer"></leaflet>
 </section>
