--- a/packages/custom/testpkg/public/views/index.html
+++ b/packages/custom/testpkg/public/views/index.html
@@ -3,7 +3,7 @@
   <h2>Package: <span>{{package.name}}</span></h2>
 
   <!-- <leaflet id="mymap" defaults="defaults" lf-center="center" height="480px" width="640px"></leaflet> -->
-  <leaflet id="mymap" lf-center="center" layers="layers" height="480px" width="640px"></leaflet>
+  <leaflet id="mymap" lf-center="center" layers="layers"></leaflet>
   <!-- <openlayers ol-center="center" height="480px" width="640px"></openlayers> -->
 
   <!-- <ol>
@@ -26,4 +26,8 @@
   </br>
   <h3><a href="http://learn.mean.io">Documentation</a></h3>
   </br> -->
+</div>
+
+<div class="testpkg-example" ng-controller="AnothermyController">
+  <p>instantiated AnothermyController</p>
 </div>
