latest development with angular2

--- a/packages/custom/geoexpress/public/views/layers/view.html
+++ b/packages/custom/geoexpress/public/views/layers/view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="LayersController" data-ng-init="findOne()">
+<section data-ng-controller="LayersController" data-ng-init="findOne()" style="width: 100%">
   <span>{{layer.created | date:'medium'}}</span> /
   <span>{{layer.user.name}}</span>
   <h2>{{layer.title}}</h2>
