--- a/packages/custom/geoexpress/public/views/system/header.html
+++ b/packages/custom/geoexpress/public/views/system/header.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD:packages/custom/geoexpress/public/views/system/header.html
+<!-- <<<<<<< HEAD:packages/custom/geoexpress/public/views/system/header.html
 <nav class="navbar navbar-inverse navbar-fixed-top" data-role="navigation" ng-controller="HeaderController as hdrctr">
     <div class="page-header">
         <div class="navbar-header">
@@ -12,7 +12,7 @@
                 <a class="navbar-brand" ui-sref="home" mean-token="'site-title'">GeoExpress</a>
             </div>
         </div>
-=======
+======= -->
 <div class="md-toolbar-tools" ng-controller="HeaderController as hdrctr">
   <img src="/meanStarter/assets/img/logo.png" alt="" class="MEAN-Logo"/>
   <h2 class="pressed-text" ui-sref="home" mean-token="'site-title'">&nbsp;MEAN</h2>
@@ -26,7 +26,7 @@
   <md-button class="md-button" aria-label="Login" ui-sref="auth.login" ng-if="!hdrctr.hdrvars.authenticated">
     Login
   </md-button>
->>>>>>> upstream/master:packages/custom/meanStarter/public/views/system/header.html
+<!-- >>>>>>> upstream/master:packages/custom/meanStarter/public/views/system/header.html -->
 
   <md-menu ng-if="hdrctr.hdrvars.authenticated" md-position-mode="target-right target">
     <md-button aria-label="Account" class="md-button top-link" ng-click="$mdOpenMenu()">
